--- a/app/src/main/res/layout/fragment_list_word.xml
+++ b/app/src/main/res/layout/fragment_list_word.xml
@@ -19,16 +19,7 @@
         android:paddingBottom="4dp">
 
         <TextView
-            android:id="@+id/lang_src"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/text_margin"
-            android:tag="Source"
-            android:textAppearance="?attr/textAppearanceListItem" />
-
-        <TextView
-            android:id="@+id/lang_dst"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
