--- a/app/src/main/res/layout/fragment_list_dictionary_list.xml
+++ b/app/src/main/res/layout/fragment_list_dictionary_list.xml
@@ -1,13 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recyclerView"
-    android:name="fr.uparis.projet.ListDictionaryFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".ListDictionaryFragment"
-    tools:listitem="@layout/fragment_list_dictionary" />
+    android:id="@+id/main_frame"
+    tools:context=".ListDictionaryFragment">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:name="fr.uparis.projet.ListDictionaryFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="LinearLayoutManager"
+        tools:context=".ListDictionaryFragment"
+        tools:listitem="@layout/fragment_list_dictionary" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="25dp"
+        android:layout_marginEnd="355dp"
+        android:layout_marginBottom="675dp"
+        android:src="@drawable/baseline_visibility_black_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:backgroundTint="@color/colorPrimary"
+        tools:ignore="ContentDescription" />
+<!--app:layout_constraintBottom_toBottomOf="parent"
+app:layout_constraintEnd_toEndOf="parent"
+app:backgroundTint="@color/colorPrimary"-->
+</androidx.constraintlayout.widget.ConstraintLayout>
