--- a/app/src/main/res/layout/fragment_search_translation.xml
+++ b/app/src/main/res/layout/fragment_search_translation.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint"
+        android:id="@+id/word_edit"
         android:layout_marginBottom="20dp"
         />
 
