Ajout langue source + dest pour recherche google

--- a/app/src/main/res/layout/fragment_search_translation.xml
+++ b/app/src/main/res/layout/fragment_search_translation.xml
@@ -48,6 +48,36 @@
         android:textSize="18sp"
         android:text="@string/google" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="8dp"
+        android:paddingBottom="4dp">
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/e_g_french"
+            android:id="@+id/lang_src_google"
+            />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="to"/>
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/e_g_english"
+            android:id="@+id/lang_dst_google"/>
+            />
+    </LinearLayout>
+
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
