--- a/app/src/main/res/layout/fragment_search_translation.xml
+++ b/app/src/main/res/layout/fragment_search_translation.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/searchButton"
-        android:text="SEARCH"
+        android:text="@string/search"
         android:layout_marginBottom="20dp"
         />
 
