--- a/app/src/main/res/layout/config_special_session.xml
+++ b/app/src/main/res/layout/config_special_session.xml
@@ -12,23 +12,10 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:rowCount="2"
+        android:rowCount="1"
         android:columnCount="2"
         android:layout_margin="10dp"
         >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="Enable"
-            android:layout_marginEnd="10dp"/>
-
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/enable"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -39,6 +26,7 @@
 
 
         <EditText
+            android:id="@+id/words"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="number"
