--- a/app/src/main/res/layout/fragment_search_translation.xml
+++ b/app/src/main/res/layout/fragment_search_translation.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<androidx.appcompat.widget.LinearLayoutCompat
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SearchTranslationFragment"
+    app:layout_scrollFlags="scroll|enterAlways"
     android:orientation="vertical"
     android:padding="50dp"
     android:gravity="left">
@@ -12,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
+        android:textColor="@color/black"
         android:text="@string/type" />
 
     <androidx.appcompat.widget.AppCompatEditText
@@ -26,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
+        android:textColor="@color/black"
         android:text="@string/selectDictionary" />
 
     <androidx.appcompat.widget.AppCompatSpinner
@@ -40,12 +47,14 @@
         android:id="@+id/searchButton"
         android:text="@string/search"
         android:layout_marginBottom="20dp"
+        android:background="@color/colorPrimaryDark"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
+        android:textColor="@color/black"
         android:text="@string/google" />
 
     <LinearLayout
@@ -67,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
+            android:textColor="@color/black"
             android:text="to"/>
 
         <androidx.appcompat.widget.AppCompatEditText
@@ -83,6 +93,8 @@
         android:layout_height="wrap_content"
         android:text="GOOGLE"
         android:id="@+id/googleButton"
+        android:background="@color/colorPrimaryDark"
         />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
+</ScrollView>
